# fake-extract-plate-3-mix

./: .copier-answers.yml  README.md  data_expolartion.ipynb  feature_list.csv  plate_3_targets.csv  plate_3_targets_detected.csv  project_init.sh  pyproject.toml  rt_extraction_neg_new.mzbatch  rt_extraction_pos_new.mzbatch
docs/mapp_project_00001/mapp_batch_00001/: CONTRIB.md
docs/mapp_project_00001/mapp_batch_00001/results/mzmine/: mapp_batch_00001.mzbatch_template
docs/shared/params/: repo_params.yaml
